# splitutils

./: CHANGELOG.md  LICENSE  README.md  setup.cfg
scripts/: run_traindevtest_split.py  run_traindevtest_split_with_binning.py  run_traintest_split.py
splitutils/: __init__.py
splitutils/core/: splitutils.py
test_package/: README.md  test_traindevtest_split_swap_prt.py
tests/: README.md  requirements.txt  test_traindevtest_split.py  test_traindevtest_split_swap_prt.py  test_traindevtest_split_with_binning.py  test_traintest_split.py
