[metadata]
name = splitutils
version = 0.4.0
author = Uwe Reichel
author_email = ureichel@audeering.com
description = Group disjunct and stratified data splits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reichelu/splitutils
project_urls =
    repository = https://github.com/reichelu/splitutils
    documentation = https://github.com/reichelu/splitutils
    company = https://www.audeering.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    scipy
    scikit-learn
